# solar_software

./: README.md
solar_1/: CMakeLists.txt  Main.qml  MyRect_Topology.qml  MyRect_World.qml  TopoTreeView.qml  qml.qrc  resource.qrc
solar_1/include/: Para.h  ParaTreeViewController.h  TopoPara.h  TopoTreeViewController.h  TreeModel.h  TreeNode.h  Vec3.h  WorldPara.h
solar_1/src/: SunShape.cpp  TopoTreeViewController.cpp  TreeViewController.cpp  WorldPara.cpp  main.cpp
solar_2/: .clang-format  AnalyticFunctionWindow.qml  CMakeLists.txt  DataVisualizationWindow.qml  Main.qml  MyRect_Topology.qml  MyRect_World.qml  ParaTreeView.qml  RayTracingWindow.qml  TopoTreeView.qml  qml.qrc
solar_2/cmake/: try_compile_libcxx.cpp  try_compile_libstdc++.cpp  try_compile_msvc_stl.cpp  try_compile_std_format.cpp
solar_2/include/: Armature.h  Attenuation.h  Geometry.h  Grid.h  HeatTubePaneReceiver.h  HeatTubePlane.h  Material.h  MaterialRT.h  Para.h  ParaTreeModel.h  ParaTreeNode.h  ParaTreeViewController.h  Profile.h  Profile.h.autosave  Ray.h  Rotation.h  Scene.h  SlopeError.h  SunPosition.h  SunShape.h  Target.h  TopoTreeModel.h  TopoTreeNode.h  TopoTreeViewController.h  Utils.h  Vec2.h  Vec3.h
solar_2/source/analytical_model/: CommonPara.cpp  CommonPara.h  Constants.h  HeliostatPara.cpp  HeliostatPara.h  HeliostatWithGlassPara.cpp  HeliostatWithGlassPara.h  ModelPara.h  ScenePara.cpp  ScenePara.h  SimulationPara.cpp  SimulationPara.h
solar_2/source/analytical_model/convolution/: ConvolutionPara.cpp  ConvolutionPara.h  HuangPara.cpp  HuangPara.h  ICauchyPara.cpp  ICauchyPara.h  UNIZARPara.cpp  UNIZARPara.h
solar_2/source/analytical_model/simplified/: BHFLCALPara.cpp  BHFLCALPara.h  HFLCALPara.cpp  HFLCALPara.h  IHFCALPara.cpp  IHFLCALPara.h  NEGPara.cpp  NEGPara.h  SimplifiedPara.cpp  SimplifiedPara.h
solar_2/source/analytical_model/ui/: AnalyticFunctionWindowAdapter.cpp  AnalyticFunctionWindowAdapter.h  AnalyticFunctionWindowEnums.cpp  AnalyticFunctionWindowEnums.h
solar_2/source/scene/: Air.cpp  Air.h  Camera.cpp  Camera.h  Cloud.cpp  Cloud.h  Heliosat.cpp  Heliosat.h  Heliostat.cpp  Heliostat.h  Location.cpp  Location.h  Node.cpp  Node.h  Ordinary.cpp  Ordinary.h  Receiver.cpp  Receiver.h  Scene.cpp  Scene.h  Sun.cpp  Sun.h  Terrain.cpp  Terrain.h
solar_2/source/simulation/: RayTracingParameter.cpp  RayTracingParameter.h
solar_2/source/topology/geometry/: BSpline.cpp  BSpline.h  Cylinder.cpp  Cylinder.h  Elliptic.cpp  Elliptic.h  Geometry.cpp  Geometry.h  Hyperbolic.cpp  Hyperbolic.h  Mesh.cpp  Mesh.h  MultiPanelComprisedOfHeatTube.cpp  MultiPanelComprisedOfHeatTube.h  Parabolic.cpp  Parabolic.h  Rectangle.cpp  Rectangle.h
solar_2/source/topology/heat_tube/: HeatTubePaneReceiver.cpp  HeatTubePaneReceiver.h  HeatTubePlane.cpp  HeatTubePlane.h
solar_2/source/topology/material/: Absorb.cpp  Absorb.h  Material.cpp  Material.h  Reflect.cpp  Reflect.h  Refract.cpp  Refract.h
solar_2/source/topology/physical/: MechanicalPara.cpp  MechanicalPara.h  ThermodynamicPara.cpp  ThermodynamicPara.h
solar_2/source/topology/slope_error/: GaussianSlopeError.cpp  GaussianSlopeError.h  PillboxSlopeError.cpp  PillboxSlopeError.h  SlopeError.cpp  SlopeError.h
solar_2/source/topology/tracker/: Armature.cpp  Armature.h  OneAxisArmature.cpp  OneAxisArmature.h  Target.cpp  Target.h  Tracker.h  TwoAxisArmature.cpp  TwoAxisArmature.h  TwoAxisWithDrivesArmature.cpp  TwoAxisWithDrivesArmature.h
solar_2/source/tree/: ParaTreeModel.cpp  ParaTreeModel.h  ParaTreeNode.cpp  ParaTreeNode.h  ParaTreeViewController.cpp  ParaTreeViewController.h  TopoTreeModel.cpp  TopoTreeModel.h  TopoTreeNode.cpp  TopoTreeNode.h  TopoTreeViewController.cpp  TopoTreeViewController.h
solar_2/source/utils/: Concepts.h  Format.h  Grid.cpp  Grid.h  HasValue.h  Para.cpp  Para.h  ParaUtils.h  Rotation.cpp  Rotation.h  StringUtils.h  Utils.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  class_name.inc  config.h
solar_2/source/world/air/: Attenuation.cpp  Attenuation.h  CustomAttenuation.h  ExponentialAttenuation.h  VacuumAttenuation.h
solar_2/source/world/sun/sun_position/: SunPosition.cpp  SunPosition.h
solar_2/source/world/sun/sunshape/: BuieSunShape.cpp  BuieSunShape.h  GaussianSunShape.cpp  GaussianSunShape.h  PillboxSunShape.cpp  PillboxSunShape.h  SunShape.cpp  SunShape.h
solar_2/src/: Armature.cpp  Attenuation.cpp  Geometry.cpp  Grid.cpp  HeatTubePaneReceiver.cpp  HeatTubePlane.cpp  Material.cpp  MaterialRT.cpp  Para.cpp  ParaTreeModel.cpp  ParaTreeNode.cpp  ParaTreeViewController.cpp  Profile.cpp  Ray.cpp  Rotation.cpp  Scene.cpp  SlopeError.cpp  SunPosition.cpp  SunShape.cpp  Target.cpp  TopoTreeModel.cpp  TopoTreeNode.cpp  TopoTreeViewController.cpp  Vec2.cpp  Vec3.cpp  main.cpp
solar_2/zqml/: RayTracingWindowParaRect.qml
solarsoft_1/: .clang-format  CMakeLists.txt  Para.cpp  Para.h  ParaTreeView.qml  ParaTreeViewController.cpp  ParaTreeViewController.h  Scene.cpp  Scene.h  SunShape.cpp  SunShape.h  TopoPara.cpp  TopoPara.h  TopoTreeView.qml  TopoTreeViewController.cpp  TopoTreeViewController.h  TreeModel.cpp  TreeModel.h  TreeNode.cpp  TreeNode.h  TreeViewController.cpp  TreeViewController.h  Utils.h  Vec3.cpp  Vec3.h  WorldPara.cpp  WorldPara.h  main.cpp  main.qml  qml.qrc
solarsoft_1/include/: Scene.h  SunShape.h  TreeViewController.h  Utils.h  config.h
solarsoft_1/src/: Para.cpp  ParaTreeViewController.cpp  Scene.cpp  TopoPara.cpp  TreeModel.cpp  TreeNode.cpp  Vec3.cpp  main.cpp
